--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "clsx": "^1.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "@types/react": "^18.2.21",
