--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "worksmart-web",
   "version": "0.1.0",
   "private": true,
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:electron-renderer": "cross-env ELECTRON=true vite build",
+    "build:electron-main": "tsc -p tsconfig.electron.json",
+    "electron:dev": "npm run build:electron-main && cross-env ELECTRON=true VITE_DEV_SERVER_URL=http://localhost:5173 concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
+    "electron:dist": "npm run build:electron-renderer && npm run build:electron-main && electron-builder --publish never"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,13 +24,38 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
+    "concurrently": "^9.1.0",
+    "cross-env": "^7.0.3",
+    "electron": "^32.2.0",
+    "electron-builder": "^25.1.8",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "wait-on": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "@types/node": "^22.10.2"
+  },
+  "build": {
+    "appId": "gr.worksmartnothard.app",
+    "productName": "WorkSmartNotHard",
+    "files": [
+      "dist/**",
+      "dist-electron/**",
+      "package.json"
+    ],
+    "mac": {
+      "target": ["zip"],
+      "category": "public.app-category.productivity"
+    },
+    "win": {
+      "target": ["zip"]
+    },
+    "linux": {
+      "target": ["AppImage"]
+    }
   }
 }
