--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:portable": "vite build --mode portable --outDir portable --emptyOutDir",
     "preview": "vite preview",
     "build:electron-renderer": "cross-env ELECTRON=true vite build",
     "build:electron-main": "tsc -p tsconfig.electron.json",
