--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
   "name": "worksmart-web",
   "version": "0.1.0",
-  "description": "WorkSmartNotHard: web + offline desktop tracker (React/Vite + Electron)",
+  "description": "WorkSmartNotHard: web + portable (double-click) build (React/Vite)",
   "author": "LevGiannis",
   "private": true,
-  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "build:portable": "vite build --mode portable --outDir portable --emptyOutDir && node scripts/portable-postbuild.mjs portable",
-    "preview": "vite preview",
-    "build:electron-renderer": "cross-env ELECTRON=true vite build",
-    "build:electron-main": "tsc -p tsconfig.electron.json",
-    "electron:dev": "npm run build:electron-main && cross-env ELECTRON=true VITE_DEV_SERVER_URL=http://localhost:5173 concurrently \"vite\" \"wait-on http://localhost:5173 && electron .\"",
-    "electron:dist": "npm run build:electron-renderer && npm run build:electron-main && electron-builder --publish never"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -27,13 +22,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
-    "concurrently": "^9.1.0",
-    "cross-env": "^7.0.3",
-    "electron": "^32.2.0",
-    "electron-builder": "^25.1.8",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
-    "wait-on": "^7.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0",
     "@types/react": "^18.2.21",
@@ -41,24 +31,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.1",
     "@types/node": "^22.10.2"
-  },
-  "build": {
-    "appId": "gr.worksmartnothard.app",
-    "productName": "WorkSmartNotHard",
-    "files": [
-      "dist/**",
-      "dist-electron/**",
-      "package.json"
-    ],
-    "mac": {
-      "target": ["zip"],
-      "category": "public.app-category.productivity"
-    },
-    "win": {
-      "target": ["zip"]
-    },
-    "linux": {
-      "target": ["AppImage"]
-    }
   }
 }
